# nanobind_package_example

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  toto.tif  toto_test.ipynb
mypackage/: CMakeLists.txt  __init__.py
mypackage/src_tissue/: tissue.cpp
